Javaプロジェクトから移植分の不整合を修正