@@ -1,25 +1,25 @@
 package com.icloud.hashiguchi.minoru.tagiron.questions;
 
-import java.util.Arrays;
-import java.util.List;
-
 import com.icloud.hashiguchi.minoru.tagiron.Tile;
+
+import java.util.List;
 
 public class QuestionMinusMinFromMax extends QuestionBase implements ShareableQuestion {
 
-	public QuestionMinusMinFromMax() {
-		this.text = this.getPrefixText("数字タイルの最大の数から、最小の数を引いた数は？");
-	}
+    public QuestionMinusMinFromMax() {
+        this.text = this.getPrefixText("数字タイルの最大の数から、最小の数を引いた数は？");
+    }
 
-	@Override
-	public List<Integer> answer(List<Tile> opponentTiles) {
-		int answer = opponentTiles.getLast().getNo() - opponentTiles.getFirst().getNo();
-		return Arrays.asList(answer);
-	}
+    @Override
+    public List<Integer> answer(List<Tile> opponentTiles) {
+        int answer = opponentTiles.get(opponentTiles.size() - 1).getNo().getValue()
+                - opponentTiles.get(0).getNo().getValue();
+        return List.of(answer);
+    }
 
-	@Override
-	public String getAnswerUnit() {
-		return "";
-	}
+    @Override
+    public String getAnswerUnit() {
+        return "";
+    }
 
 }
